# RAG_exercise

./: README.md
claude_MCP_RAG/: LLM_MCP_RAG_수업자료.md  README.md  classifier.py  pyproject.toml  rag.py  server.py
gemmar_RAG/: README.md  api.py  api_RAG.py  ask.py  ingest.py
