[project]
name = "pest-mcp"
version = "0.1.0"
description = "Greenhouse pest classification MCP server with PDF RAG"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "torch>=2.0.0",
    "timm>=0.9.0",
    "albumentations>=1.3.0",
    "opencv-python>=4.7.0",
    "numpy>=1.24.0",
    "pypdf>=3.0.0",
    "chromadb>=0.4.0",
    "Pillow>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
